[package]
name = "anchor-options"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_options"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.21.0"
anchor-spl = {version = "0.21.0"}
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
pyth-client = {version = "0.3.0", features = ["no-entrypoint"]}
num-traits = "0.2.14"
num-derive = "0.3.3"